# yijian-zhi-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit.md  docker-compose.yml  index.py  init_all.py  pyproject.toml  settings.py  setup_logging.py  split.py
.chainlit/: config.toml
.chainlit/translations/: zh-TW.json
data/original/: yijian_zhi.docx
data_source/original/: yijian_zhi.docx
data_source/splitted/: 00000001.txt  00000002.txt  00000003.txt  00000004.txt  00000005.txt  00000006.txt  00000007.txt  00000008.txt  00000009.txt  00000010.txt  00000011.txt  00000012.txt  00000013.txt  00000014.txt  00000015.txt  00000016.txt  00000017.txt  00000018.txt  00000019.txt  00000020.txt  00000021.txt  00000022.txt  00000023.txt  00000024.txt  00000025.txt  00000026.txt  00000027.txt  00000028.txt  00000029.txt  00000030.txt  00000031.txt  00000032.txt  00000033.txt  00000034.txt  00000035.txt  00000036.txt  00000037.txt  00000038.txt  00000039.txt  00000040.txt  (+271 more)
logging_configs/: config.json
public/: remove-watermark.js  theme.json
qdrant/: meta.json
